# TrussC-dll

./: README.md
.github/workflows/: build.yml
addons/tcxBox2d/: CMakeLists.txt
addons/tcxGltf/: CMakeLists.txt  LICENSES.md
addons/tcxGltf/example-gltf/: addons.make
addons/tcxGltf/example-gltf/src/: main.cpp  tcApp.cpp  tcApp.h
addons/tcxGltf/src/: tcxGltf.cpp  tcxGltf.h
addons/tcxHap/: CMakeLists.txt
addons/tcxImGui/src/platform/: imgui_impl_win.cpp
addons/tcxOsc/src/: tcxOscReceiver.h  tcxOscSender.h
addons/tcxTls/: CMakeLists.txt
addons/tcxWebSocket/: CMakeLists.txt
core/: CMakeLists.txt
core/cmake/: trussc_app.cmake  use_addon.cmake
core/include/: TrussC.h
core/include/tc/app/: tcHotReloadHost.h
core/include/tc/utils/: tcStandardTools.h
core/platform/: c_exports.cpp  platform_c_exports.cpp
core/platform/android/: tcPlatform_android.cpp
core/platform/ios/: tcPlatform_ios.mm
core/platform/linux/: tcPlatform_linux.cpp
core/platform/mac/: tcPlatform_mac.mm
core/platform/web/: tcPlatform_web.cpp
core/platform/win/: tcPlatform_win.cpp
core/shaders/: lut.glsl  meshPbr.glsl  shadowDepth.glsl
docs/: ARCHITECTURE.md  BUILD_SYSTEM.md  GEM_TrussC_Assistant.md  GET_STARTED.md  GET_STARTED_jp.md  TrussC_vs_openFrameworks.md  api-definition.yaml
examples/3d/3DPrimitivesExample/src/: tcApp.cpp  tcApp.h
examples/3d/easyCamExample/src/: tcApp.cpp
examples/3d/normalMapExample/: CMakeLists.txt
examples/3d/normalMapExample/src/: main.cpp  tcApp.cpp  tcApp.h
examples/3d/pbrSpheresExample/: CMakeLists.txt
examples/3d/pbrSpheresExample/src/: main.cpp  tcApp.h
examples/3d/projectorSimulationExample/: CMakeLists.txt
examples/3d/projectorSimulationExample/src/: main.cpp  tcApp.cpp  tcApp.h
examples/tests/AllFeaturesExample/: addons.make
examples/tests/AllFeaturesExample/src/: tcApp.cpp
examples/utils/systemInfoExample/src/: main.cpp  tcApp.h
projectGenerator/: buildProjectGenerator_mac.command  buildProjectGenerator_win.bat
projectGenerator/tools/projectGenerator/src/: main.cpp
tools/: CMakeLists.txt  build_win.bat
tools/src/: main.cpp  tcApp.cpp
trussc/: CMakeLists.txt
trussc/cmake/: trussc_app.cmake  use_addon.cmake
trussc/include/: TrussC.h
trussc/include/tc/gpu/shaders/: lut.glsl.h
trussc/include/tc/platform/: c_exports.h
trussc/platform/: c_exports.cpp
trussc/platform/android/: tcPlatform_android.cpp
trussc/platform/ios/: tcPlatform_ios.mm
trussc/platform/linux/: tcPlatform_linux.cpp
trussc/platform/web/: tcPlatform_web.cpp
trussc/platform/win/: tcPlatform_win.cpp  tcSound_win.cpp
